--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ group = 'com.generation'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = "17"
 }
 
 // 의존성을 받을 저장소
@@ -24,9 +24,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+targetCompatibility = JavaVersion.VERSION_17
