--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,14 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// 스프링 데이터 JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'jakarta.persistence:jakarta.persistence-api'
+	// 인메모리 데이터베이스
+	runtimeOnly 'com.h2database:h2'
+	// 롬복
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
