--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,10 @@ dependencies {
 	// XML 문서와 Java 객체 간 매핑 자동화
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	// 테스트
+	testImplementation 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
