--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,17 @@ dependencies {
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	// 스프링 시큐리티를 테스트하기 위한 의존성 추가
 	testImplementation 'org.springframework.security:spring-security-test'
+	// 자바 JWT 라이브러리
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	// XML 문서와 Java 객체 간 매핑 자동화
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	// 테스트
+	testImplementation 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	// OAuth2 사용
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
