--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
           google:
             client-id: 699118611095-o9cnl0j277ecjes8j7jtaj7tqjf70t6i.apps.googleusercontent.com
             client-secret: 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
+            scope:
+              - email
+              - profile
 
 jwt:
   issuer: nile7895@hani.com
